namespace app.Models
{
    public enum ReadingStatus
    {
        NotStarted,
        Reading,
        Completed
    }
}